cmd/review-gateway/k8s/04-traefik-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: review-gateway-traefik-app-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: review-gateway-traefik-app
    k8s.kuboard.cn/workload: review-gateway-traefik-app
    kubernetes.io/ingress.class: "traefik-internet"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares:
      kube-system-oplog@kubernetescrd,
      kube-system-strip-review-gateway-prefix@kubernetescrd,
      kube-system-http-redirect-https@kubernetescrd,
      kube-system-common-headers@kubernetescrd,
      kube-system-headers-appid-to-body@kubernetescrd,
      kube-system-headers-userid-to-body@kubernetescrd,
      kube-system-headers-app-login-token-to-body@kubernetescrd,
      kube-system-app-rbac-auth@kubernetescrd

spec:
  rules:
    - host: api.npool.top
      http: &http_rules
        paths:
          - path: /api/review/v2/version
            backend:
              serviceName: review-gateway
              servicePort: 50450
    - host: api.procyon.vip
      http: *http_rules
    - host: api.xpool.top
      http: *http_rules
    - host: api.ohhash.com
      http: *http_rules
    - host: api.jh-testing.npool.top
      http: *http_rules
    - host: api.procyon.npool.top
      http: *http_rules
    - host: api.procyon.xpool.top
      http: *http_rules
    - host: api.lpsb.xpool.top
      http: *http_rules
    - host: api.development.npool.top
      http: *http_rules
    - host: api.lpsecretbase.com
      http: *http_rules
    - host: api.epool.tech
      http: *http_rules
    - host: api.xhash.ai
      http: *http_rules
    - host: api.tokyo-xhash-production.npool.top
      http: *http_rules

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: review-gateway-traefik-app-user-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: review-gateway-traefik-app-user
    k8s.kuboard.cn/workload: review-gateway-traefik-app-user
    kubernetes.io/ingress.class: "traefik-internet"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares:
      kube-system-oplog@kubernetescrd,
      kube-system-strip-review-gateway-prefix@kubernetescrd,
      kube-system-http-redirect-https@kubernetescrd,
      kube-system-common-headers@kubernetescrd,
      kube-system-headers-appid-to-body@kubernetescrd,
      kube-system-headers-userid-to-body@kubernetescrd,
      kube-system-headers-app-login-token-to-body@kubernetescrd,
      kube-system-app-user-role-rbac-auth@kubernetescrd

spec:
  rules:
    - host: api.npool.top
      http: &http_rules
        paths:
          - path: /api/review/v2/get/kycreviews
            backend:
              serviceName: review-gateway
              servicePort: 50450
          - path: /api/review/v2/get/app/kycreviews
            backend:
              serviceName: review-gateway
              servicePort: 50450
          - path: /api/review/v2/update/kycreview
            backend:
              serviceName: review-gateway
              servicePort: 50450
          - path: /api/review/v2/update/app/kycreview
            backend:
              serviceName: review-gateway
              servicePort: 50450

          - path: /api/review/v2/get/withdrawreviews
            backend:
              serviceName: review-gateway
              servicePort: 50450
          - path: /api/review/v2/get/app/withdrawreviews
            backend:
              serviceName: review-gateway
              servicePort: 50450
          - path: /api/review/v2/update/withdrawreview
            backend:
              serviceName: review-gateway
              servicePort: 50450
          - path: /api/review/v2/update/app/withdrawreview
            backend:
              serviceName: review-gateway
              servicePort: 50450

          - path: /api/review/v2/get/couponwithdrawreviews
            backend:
              serviceName: review-gateway
              servicePort: 50450
          - path: /api/review/v2/get/app/couponwithdrawreviews
            backend:
              serviceName: review-gateway
              servicePort: 50450
          - path: /api/review/v2/update/couponwithdrawreview
            backend:
              serviceName: review-gateway
              servicePort: 50450
          - path: /api/review/v2/update/app/couponwithdrawreview
            backend:
              serviceName: review-gateway
              servicePort: 50450
    - host: api.procyon.vip
      http: *http_rules
    - host: api.xpool.top
      http: *http_rules
    - host: api.ohhash.com
      http: *http_rules
    - host: api.jh-testing.npool.top
      http: *http_rules
    - host: api.procyon.npool.top
      http: *http_rules
    - host: api.procyon.xpool.top
      http: *http_rules
    - host: api.lpsb.xpool.top
      http: *http_rules
    - host: api.development.npool.top
      http: *http_rules
    - host: api.lpsecretbase.com
      http: *http_rules
    - host: api.epool.tech
      http: *http_rules
    - host: api.xhash.ai
      http: *http_rules
    - host: api.tokyo-xhash-production.npool.top
      http: *http_rules
